<resources>
    <string name="app_name">VIR Band Survey</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_identification_details">Identification Details</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="tvi_logo">TVI LOGO</string>
    <string name="A104_a">Sachal Goth</string>
    <string name="A104_b">Pehalwan Goth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="household_number">Household Number</string>
    <string name="sA"> شناختی تفصیلات </string>
    <string name="A01"> فارم نمبر </string>
    <string name="A02"> گھرانہ نمبر </string>
    <string name="A03"> پروجیکٹ کا علاقہ </string>
    <string name="A04"> علاقہ </string>
    <string name="A04_a"> سچل گوٹھ </string>
    <string name="A04_b"> پہلوان گوٹھ </string>
    <string name="sB"> انڈیکس چائلڈ کی تفصیلات </string>
    <string name="B05"> نام </string>
    <string name="B06"> جنس </string>
    <string name="B06_a"> مرد </string>
    <string name="B06_b"> عورت </string>
    <string name="B07"> تاریخ پیدائش </string>
    <string name="AGE"> عمر </string>
    <string name="B09"> والدہ کا نام </string>
    <string name="B10"> والد کا نام </string>
    <string name="B11"> جائے پیدائش </string>
    <string name="PVTH"> نجی ہسپتال </string>
    <string name="B11_b"> نجی کلینک </string>
    <string name="B11_c"> گھر پر </string>
    <string name="GOVTH"> سرکاری ہسپتال </string>
    <string name="OTHER"> دیگر </string>
    <string name="sC"> جوابدہندہ کی تفصیلات </string>
    <string name="C12"> نام </string>
    <string name="C14"> جنس </string>
    <string name="C14_m"> مرد </string>
    <string name="C14_f"> عورت </string>
    <string name="C15">پتہ</string>
    <string name="C16"> رہائش </string>
    <string name="C16_a"> مستقل </string>
    <string name="C16_b"> عارضی </string>
    <string name="C17"> رابطے کے تفصیلات </string>
    <string name="C17_a"> پی ٹی سی ایل نمبر </string>
    <string name="C17_b"> موبائل نمبر </string>
    <string name="C18"> مذہب </string>
    <string name="C18_a"> اسلام </string>
    <string name="C18_b"> ہندوازم </string>
    <string name="C18_c"> عیسائیت </string>
    <string name="C19"> خاندانی نظام </string>
    <string name="C19_a"> مشترکہ </string>
    <string name="C19_b"> انفرادی </string>
    <string name="C20"> گھر میں بولی جانےوالی زبان </string>
    <string name="C20_a"> اردو </string>
    <string name="C20_b"> سندھی </string>
    <string name="C20_c"> سرائیکی </string>
    <string name="C20_d"> پشتو </string>
    <string name="C20_e"> پنجابی </string>
    <string name="C20_f"> بلوچی </string>
    <string name="C21"> ازدواجی حیثیت </string>
    <string name="C21_a"> غیر شادی شدہ </string>
    <string name="C21_b"> شادی شدہ </string>
    <string name="C21_c"> طلاق یافتہ </string>
    <string name="C21_d"> علیحدگی </string>
    <string name="C21_e"> بیوہ </string>
    <string name="C22"> انڈیکس چائلڈ سے رشتہ </string>
    <string name="C22_a"> والدہ </string>
    <string name="C22_b"> والد </string>
    <string name="C22_c"> دادی/نانی </string>
    <string name="AUNT"> خالہ/پھپھو/چچی/مامی </string>
    <string name="sD"> انڈیکس چائلڈ کے خاندان کی سماجی ومعاشی حیثیت </string>
    <string name="D23"> جوابدہندہ کی تعلیم حیثیت(اگر جوابدہندہ بچے کے والین ہوں تو یہ سوال نہیں پوچھیں اور اگلا سوال کریں ) </string>
    <string name="NA"> ناقابل اطلاق </string>
    <string name="UNEDU"> روایتی تعلیم سے نا آشناؒ </string>
    <string name="PRI"> ابتدائی </string>
    <string name="SEC"> ثانوی </string>
    <string name="METRIC"> میٹرک </string>
    <string name="INTER"> انٹر </string>
    <string name="GRAD"> گریجوییشن </string>
    <string name="MS"> ماسٹرز </string>
    <string name="MADRSA"> مدرسہ تعلیم </string>
    <string name="D24"> والدہ کی تعلیم </string>
    <string name="D25"> والد کی تعلیم </string>
    <string name="D26"> والد کا پیشہ </string>
    <string name="GOVTEMP"> سرکاری ملازمت </string>
    <string name="LABOUR"> مزدوری </string>
    <string name="PVTEMP"> نجی ملازمت </string>
    <string name="PVTBUSI"> نجی کاروبار </string>
    <string name="D27"> والدہ کا پیشہ </string>
    <string name="UNEMP"> بیروزگار </string>
    <string name="D27_f"> گھریلو بیوی </string>
    <string name="D28"> گھرانے کی ماہانہ آمدنی </string>
    <string name="D28_a"> غیر مستقل آمدنی </string>
    <string name="D28_b"> پانچ ہزارروپے سے کم </string>
    <string name="D28_c"> پانچ ہزار سے دس ہزار روپے تک </string>
    <string name="D28_d"> دس سے پندرہ ہزار روپے تک </string>
    <string name="D28_e"> پندرہ ہزار سے بیس ہزار روپے تک </string>
    <string name="sE"> معلومات، رویہ اور عمل </string>
    <string name="E29"> کیا آپ نے کبھی ویکسینیشن (ٹیکے لگوانے)کے بارے میں سنا ہے </string>
    <string name="YES"> جی ہاں </string>
    <string name="NO"> جی نہیں </string>
    <string name="E30"> ویکسینیشن (ٹیکے لگوانے)کے بارے میں کیا سنا ہے </string>
    <string name="E30_a"> بیماریوں کے علاج کے لئے </string>
    <string name="E30_b"> بچوں کے لئے اچھا نہیں ہے </string>
    <string name="E30_c"> بچوں کے لئے بہت اہم ہے </string>
    <string name="E30_d"> بیماریوں سے بچاوٗ کے لئے </string>
    <string name="E30_e"> قوت مدافعت بڑھانے کے لئے </string>
    <string name="E31"> ویکسینیشن (ٹیکے لگوانے)کے بارے میں کہاں سے معلومات حاصل ہوئیں </string>
    <string name="E31_a"> ٹیکے لگانے والا </string>
    <string name="E31_b"> پولیو ٹیم </string>
    <string name="E31_c"> اخبار </string>
    <string name="E31_d"> معلوماتی مواد </string>
    <string name="TV"> ٹی وی </string>
    <string name="E31_f"> ریڈیو </string>
    <string name="E31_g"> استاد </string>
    <string name="E31_h"> ڈاکٹر </string>
    <string name="E31_i"> پڑوسی </string>
    <string name="E31_j"> دوست </string>
    <string name="E31_k"> رشتےدار </string>
    <string name="LEADER"> مذہبی رہنما </string>
    <string name="E32"> کیا آپ نے کبھی ||| کی ویکسینیشن کروائی  </string>
    <string name="DNK"> نہیں معلوم </string>
    <string name="E33"> بچے پر ویکسینیشن کا اثر </string>
    <string name="E33_a"> بخار </string>
    <string name="E33_b"> بیماری </string>
    <string name="E33_c"> معذوری </string>
    <string name="E33_d"> انتقال </string>
    <string name="E33_e"> بیماریوں سے بچاوٗ </string>
    <string name="NOTH"> کچھ نہیں ہوا </string>
    <string name="E34"> ٓپ کے خاندان میں ویکسینیشن کے حوالے سے کون فیصلہ کرتا ہے </string>
    <string name="E34_a"> بچے کی والدہ </string>
    <string name="E34_b"> بچے کے والد </string>
    <string name="E34_c"> بچے کے چچا /ماموں/پھوپھا /خالو </string>
    <string name="E34_e"> نانی/دادی </string>
    <string name="E34_f"> دادا/نانا </string>
    <string name="E34_g"> سسرال والے </string>
    <string name="E34_i"> بھائی </string>
    <string name="E34_j"> بہن </string>
    <string name="E35"> خاندان کا فیصلہ ساز فرد ویکسینیشن کے حق میں ہے </string>
    <string name="E35a"> اگر ’نہیں‘تو کیوں حق میں نہیں ہیں </string>
    <string name="E35a_1"> یہ ویکسین بیکار ہوتی ہیں </string>
    <string name="E35a_2"> مذہب میں اس کی اجازت نہیں ہے </string>
    <string name="E35a_3"> یہ بچے کے لئے نقصاندہ ہے </string>
    <string name="E36"> ٓپ کے خیال میں کیا نومولود بچوں کے لئے ویکسینیشن ضروری ہے </string>
    <string name="E36_a"> جی ہاں </string>
    <string name="E36_b"> جی نہیں </string>
    <string name="E36a"> کیوں ضروری ہے </string>
    <string name="Ea_1"> بچے کو بیماریوں سے بچانے کے لئے </string>
    <string name="Ea_2"> بچہ مزید صحتمند ہوجاتا ہے </string>
    <string name="Ea_3"> ویکسینیشن قوت مدافعت بڑھاتی ہے </string>
    <string name="Ea_4"> بچہ جسمانی طور پر بہت کمزور اورغیر محفوظ ہے </string>
    <string name="Ea_5"> یہ بچے کو مزید مضبوط بناتی ہے </string>
    <string name="E36b"> کیوں غیر ضروری ہے </string>
    <string name="E36b_1"> بچہ کسی انجیکشن کو برداشت نہیں کر سکتا </string>
    <string name="E36b_2"> ویکسینیشن کی وجہ سے بچہ مزید غیر محفوظ ہو گیا ہے </string>
    <string name="E36b_3"> ویکسینیشن سے بچوں میں نامردی پیدا ہوتی ہے </string>
    <string name="E37"> ویکسینیشن شروع کروانے کے لئے مناسب عمر </string>
    <string name="E37_b"> پیدائش کے وقت </string>
    <string name="E37_c"> ایک ہفتے کی عمر میں </string>
    <string name="E37_d"> ۲ ہفتے کی عمر میں </string>
    <string name="E37_e"> ایک ماہ کی عمر میں </string>
    <string name="E37_f"> دو ماہ کی عمر میں </string>
    <string name="E38"> آپ کے خیال میں ویکسینیشن شروع کرنے کےلئے یہ عمر کیوں مناسب ہے </string>
    <string name="E38_b"> بچے کو درد تھوڑا کم ہوگا </string>
    <string name="E38_c"> ویکسینیشن قوت مدافعت بڑھاتی ہے </string>
    <string name="E38_d"> بچپن میں بچے کو زیادہ سے زیادہ تحفظ فراہم کرنے کے لئے </string>
    <string name="E38_e"> ویکسین زیادہ بہتر طور پر اثر کرے گی </string>
    <string name="E39"> ۴ ماہ کی عمر تک میں بچے کو کتنی ویکسین لگائی جاتی ہیں </string>
    <string name="E39_b"> ایک </string>
    <string name="E39_c"> دو </string>
    <string name="E39_d"> تین </string>
    <string name="E39_e"> چار </string>
    <string name="E40"> کیا آپ کے خیال میں ساری ویکسین لگوانا اہم ہے </string>
    <string name="E40_a"> جی ہاں اہم ہے </string>
    <string name="E40_b"> جی نہیں ، غیر اہم ہے </string>
    <string name="E40a">  </string>
    <string name="E40b"> کیوں غیر اہم ہے </string>
    <string name="E40b_1"> بچہ بہت سے انجیکشن برداشت نہیں کر سکتا </string>
    <string name="E40b_2"> ویکسینیشن کی وجہ سے بچہ مزید غیر محفوظ ہو جاتا ہے </string>
    <string name="E40b_3"> ویکسینیشن سے بچوں میں نامردی پیدا ہوتی ہے </string>
    <string name="E41"> آپ اپنے بچے کو ویکسینیشن کے لئے عموماًکہاں لے کر جاتے ہیں </string>
    <string name="PVTC"> نجی کلینک </string>
    <string name="GOVTD"> سرکاری ڈسپینسری </string>
    <string name="EPIVC"> ای پی آئی ویکسینیشن سینٹر </string>
    <string name="HC"> طبی کیمپ </string>
    <string name="E42"> آپ ویکسینیشن سینٹر تک جانے کے لئے کون سی سواری استعمال کرتے ہیں </string>
    <string name="E42_a"> پیدل </string>
    <string name="E42_b"> گاڑی </string>
    <string name="E42_c"> موٹر سائیکل </string>
    <string name="E42_d"> ٹیکسی </string>
    <string name="E42_e"> رکشہ </string>
    <string name="E42_f"> بس </string>
    <string name="E43"> جو سواری آپ استعمال کرتے ہیں اس میں کتنی دیر میں آپ اپنے گھر سے ویکسینیشن کی جگہ تک پپہنچتےہیں </string>
    <string name="E43_a"> پانچ منٹ میں </string>
    <string name="E43_b"> دس منٹ میں </string>
    <string name="E43_c"> پندرہ منٹ میں </string>
    <string name="E43_d"> بیس منٹ میں </string>
    <string name="E43_e"> پچیس منٹ میں </string>
    <string name="E44"> اس سفر میں کتنے پیسے لگتے ہیں </string>
    <string name="E44_a"> پچاس روپے سے کم </string>
    <string name="E44_b"> پچاس سے سو روپے </string>
    <string name="E44_c"> ایک سو ایک سے دو سو روپے </string>
    <string name="E44_d"> دو سو ایک سے تین سو روپے </string>
    <string name="E44_e"> تین سو ایک سے چار سو روپے </string>
    <string name="E45"> کیا آپ کو معلوم ہے کہ حکومت کی طرف سے تمام ویکسین مفت ملتی ہیں </string>
    <string name="E45_a"> جی مجھے معلوم پے </string>
    <string name="submit">Submit</string>
</resources>