<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="horizontal">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout"
        android:orientation="vertical"
        tools:context="com.example.hassannaqvi.virband.sB">


        <ImageView
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/tvilogo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/B05"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/B05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="QWERTYUIOPASDFGHJKLZXCVBNM, ,qwertzuiopasdfghjklyxcvbnm"
            android:inputType="text"
            android:textSize="24sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/B07"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <DatePicker
            android:id="@+id/B07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:calendarViewShown="false"
            android:datePickerMode="calendar"
            android:endYear="2016"
            android:spinnersShown="true"
            android:startYear="2014" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/B06"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/B06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:layout_alignTop="@+id/B08"
                android:layout_marginLeft="40dp">

                <RadioButton
                    android:id="@+id/B06_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:text="@string/male"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/B06_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:text="@string/female"
                    android:textSize="18sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/AGE"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/B08"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView"
                android:layout_below="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="40dp"
                android:digits="0,1,2,3,4,5,6,7,8,9,*,-, ,y,m"
                android:inputType="text" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/B09"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/B09"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:digits="QWERTYUIOPASDFGHJKLZXCVBNM, ,qwertzuiopasdfghjklyxcvbnm"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/B10"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/B10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="QWERTYUIOPASDFGHJKLZXCVBNM, ,qwertzuiopasdfghjklyxcvbnm"
            android:inputType="text" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/B11"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <RadioGroup
            android:id="@+id/B11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="right">

            <RadioButton
                android:id="@+id/B11_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"
                android:paddingRight="24dp"
                android:text="@string/PVTH"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/B11_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"
                android:text="@string/PVTC"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/B11_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"
                android:text="@string/B11_c"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/B11_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"
                android:text="@string/GOVTH"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/B11_e"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"
                android:text="@string/OTHER"
                android:textSize="18sp" />


        </RadioGroup>

        <Button
            android:id="@+id/btnSubmitSB"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/green"
            android:onClick="submitSB"
            android:text="@string/submit"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>
