<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:scrollbars="horizontal">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.hassannaqvi.virband.sA">


    <ImageView
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/tvilogo" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:padding="12dp"
        android:text="@string/A02"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:typeface="serif" />

    <EditText
        android:id="@+id/A02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:digits="1234567890-QWERTYUIOPASDFGHJKLZXCVBNM"
        android:inputType="text"
        android:maxLength="5"
        android:textColor="#654688" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:padding="12dp"
            android:text="@string/cluster"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:typeface="serif" />

        <EditText
            android:id="@+id/A105"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
        android:inputType="number"
            android:maxLength="9"
        android:textColor="#654688" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:padding="12dp"
        android:text="@string/A04"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:typeface="serif" />

    <RadioGroup
        android:id="@+id/A04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="right">

        <RadioButton
            android:id="@+id/A04_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/A04_a"
            android:textSize="24sp"
            android:typeface="serif" />

        <RadioButton
            android:id="@+id/A04_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/A04_b"
            android:textSize="24sp"
            android:typeface="serif" />
    </RadioGroup>

    <Button
        android:id="@+id/btnsubmitSA"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:onClick="submitSA"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="Submit"
        android:textColor="@color/white"
        android:textSize="24sp" />

</LinearLayout>
</ScrollView>